--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
     <h1>Hoy trabajamos con repositorio local y remoto.</h1>
+
+    <p>Comisión 38000, sábados de 11:30 a 16:00</p>
     
 </body>
 </html>
