--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <h1>Hoy trabajamos con repositorio local y remoto.</h1>
 
     <p>Comisión 38000, sábados de 11:30 a 16:00</p>
+
+    <h2>CODERHOUSE</h2>
+
+    <div>
+        <img src="./img/imagen-dw.jpg" alt="DW">
+    </div>
     
 </body>
 </html>
